--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,10 @@
   .navbar-inverse {
     background-color: #FCF4EC;
   }
-  /*nav-barens bakgrund ändrad från default*/
+  /* nav-barens bakgrund ändrad från default
   .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
     background-color: #FCF4EC;
-  }
+  } */
   /*texten på listitem ändrats till svart*/
   .navbar-inverse .navbar-nav>li>a {
     color: #000;
