--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,13 @@
   .navbar-inverse {
     background-color: #FCF4EC;
   }
-  /* nav-barens bakgrund ändrad från default
-  .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-    background-color: #FCF4EC;
-  } */
   /*texten på listitem ändrats till svart*/
   .navbar-inverse .navbar-nav>li>a {
     color: #000;
 }
 /* Ändrar förgen på texten när man hovrar över den. Den aktiva sidan visas med röd bakgrund */
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
-  color: #fff;
+.navbar-inverse .navbar-nav>.active>a {
+  /* color: #000; */
   background-color: #c03c3c;
 }
 li form {
