--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,8 @@ footer {
   width: 100%; /* Set width to 100% */
   margin: auto;
   min-height:200px;
+  max-height: 300px;
+  max-width: 400px;
 }
 /* En rubrik för att fylla ut lite på sidan*/
 #headaboutus {
